test/fail/M0127.mo
//CLASSICAL-PERSISTENCE-ONLY
actor {
  system func preupgrade(foo : Bool) {}
}
